gif and fixed index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="./synaptic.min.js"></script>
     <script src="./ia.js"></script>
-    <title>Document</title>
+    <title>Neural Network Test</title>
 </head>
 <body>
     <div id="tracker0" class="circle"></div>
@@ -18,8 +18,8 @@
         <main>
             <h1>Neural Network Test</h1>
             <p>
-                This is a simple neural network test made with Synaptic.
-                The circles learn to follow the pointer. They use the same network design (three layers with 2, 3 and 2 neurons) with a different learning rate.
+                This is a simple neural network test made with <a href="https://caza.la/synaptic">Synaptic</a>. <br>
+                The circles learn to follow the pointer, they use the same network design (three layers with 2, 3 and 2 neurons) with a different learning rate.
             </p>
         </main>
 </body>
